feat : 상품 검색 기능 추가 fix : 상품 추가 불가 오류 수정 docs : 공통 html 폴더 위치 이동 test : 상품 조회 및 상품 추가 기능 테스트

--- a/order/src/main/resources/application.yml
+++ b/order/src/main/resources/application.yml
@@ -23,7 +23,7 @@ spring:
     password: 1234
 
 # Configuration mybatis
-# mybatis:
-#   mapper-locations: classpath:sqlmap/**/*.xml
-#   configuration:
-#     map-underscore-to-camel-case: true
+mybatis:
+  mapper-locations: classpath:sqlmapper/**/*.xml
+  configuration:
+    map-underscore-to-camel-case: true
