feat : 기능 마무리 fix : 기능 오류 마무리 docs : v2 개설 및 개발 및 완료

--- a/order/src/main/resources/application.yml
+++ b/order/src/main/resources/application.yml
@@ -25,5 +25,5 @@ spring:
 # Configuration mybatis
 mybatis:
   mapper-locations: classpath:sqlmapper/**/*.xml
-  configuration:
-    map-underscore-to-camel-case: true
+#  configuration:
+#    map-underscore-to-camel-case: true
