--- a/order/src/main/resources/application.yml
+++ b/order/src/main/resources/application.yml
@@ -4,6 +4,14 @@ server:
 
 # Configuration Thymeleaf
 spring:
+  jpa:
+    hibernate:
+      ddl-auto: none
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: true
+
   thymeleaf:
     prefix: classpath:/templates
     suffix: .html
@@ -22,8 +30,17 @@ spring:
     username: orderuser
     password: 1234
 
+  # Application name
+  application:
+    name: order
+
+logging:
+  level:
+    org.hibernate.SQL: debug
+    org.hibernate.type: trace
+
 # Configuration mybatis
-mybatis:
-  mapper-locations: classpath:sqlmapper/**/*.xml
+#mybatis:
+#  mapper-locations: classpath:sqlmapper/**/*.xml
 #  configuration:
 #    map-underscore-to-camel-case: true
