--- a/order/src/main/resources/application.yml
+++ b/order/src/main/resources/application.yml
@@ -4,13 +4,6 @@ server:
 
 # Configuration Thymeleaf
 spring:
-  jpa:
-    hibernate:
-      ddl-auto: none
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-        format_sql: true
 
   thymeleaf:
     prefix: classpath:/templates
@@ -40,7 +33,5 @@ logging:
     org.hibernate.type: trace
 
 # Configuration mybatis
-#mybatis:
-#  mapper-locations: classpath:sqlmapper/**/*.xml
-#  configuration:
-#    map-underscore-to-camel-case: true
+mybatis:
+  mapper-locations: classpath:sqlmapper/**/*.xml
